kubernetes/halal-place-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: halal-place-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: halal-place-catalog
  template:
    metadata:
      labels:
        app: halal-place-catalog
    spec:
      containers:
        - image: selmah/rso-project:halal-place-catalog-api-v1-03-01-2021
          name: halal-place-catalog
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: health/live
              port: server
            initialDelaySeconds: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: halal-place-catalog
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: halal-place-catalog
